--- a/MSO687_CONSOLEAPP/Properties/Settings.settings
+++ b/MSO687_CONSOLEAPP/Properties/Settings.settings
@@ -10,9 +10,6 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=kphosq101\shpol;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1</Value>
     </Setting>
-    <Setting Name="MSO687_CONSOLEAPP_ScreenService_ScreenService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">https://ews-kpd.kppmining.net/ews/services/ScreenService</Value>
-    </Setting>
     <Setting Name="DB_MANAGEMENT_SERVICES_KPTConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
@@ -28,6 +25,9 @@
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=kphosq101\shpol;Initial Catalog=DB_MANAGEMENT_SERVICES_KPT;Persist Security Info=True;User ID=sqlservices;Password=sqlservices1</Value>
+    </Setting>
+    <Setting Name="MSO687_CONSOLEAPP_ScreenService_ScreenService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://ews-kpt.kppmining.net/ews/services/ScreenService</Value>
     </Setting>
   </Settings>
 </SettingsFile>
