--- a/PLANT_PPE/Web.config
+++ b/PLANT_PPE/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=kphosq101\shpol;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />
+    <add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=10.14.101.101\SHPOL;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -14,9 +14,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  
     <!--Local-->
-    <add key="WebApp_Link" value="https://localhost:44366/" />
+    <!--<add key="WebApp_Link" value="https://localhost:44366/" />-->
     <!--development-->
     <!--<add key="WebApp_Link" value="http://10.14.101.111:1906/"/>-->
+	<add key="WebApp_Link" value="https://ppeapikpt.azurewebsites.net/"/>
 
 	<add key="report_server_url" value="http://10.14.101.181/Reports_RPTPROD/" />
 	<add key="report_path" value="/PPE/"/>
