--- a/API_PLANT_PPE/Web.config
+++ b/API_PLANT_PPE/Web.config
@@ -10,7 +10,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=kphosq101\shpol;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />
+    <add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=10.14.101.101\SHPOL;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
