--- a/MOK_CONS_PPE/Properties/Settings.settings
+++ b/MOK_CONS_PPE/Properties/Settings.settings
@@ -13,16 +13,16 @@
     <Setting Name="LogDir" Type="System.String" Scope="Application">
       <Value Profile="(Default)">D:\Application\</Value>
     </Setting>
+    <Setting Name="MOK_CONS_PPE_EquipmentService_EquipmentService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://ews-kpt.kppmining.net/ews/services/EquipmentService</Value>
+    </Setting>
     <Setting Name="DB_PLANT_PPE_NEW_KPT" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=kphosq101\shpol;Initial Catalog=DB_PLANT_PPE_NEW_KPT;Persist Security Info=True;User ID=sqlservices;Password=sqlservices1&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=10.14.101.101\SHPOL;Initial Catalog=DB_PLANT_PPE_NEW_KPT;Persist Security Info=True;User ID=sqlservices;Password=sqlservices1&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=kphosq101\shpol;Initial Catalog=DB_PLANT_PPE_NEW_KPT;Persist Security Info=True;User ID=sqlservices;Password=sqlservices1</Value>
-    </Setting>
-    <Setting Name="MOK_CONS_PPE_EquipmentService_EquipmentService" Type="(Web Service URL)" Scope="Application">
-      <Value Profile="(Default)">https://ews-kpt.kppmining.net/ews/services/EquipmentService</Value>
+      <Value Profile="(Default)">Data Source=10.14.101.101\SHPOL;Initial Catalog=DB_PLANT_PPE_NEW_KPT;Persist Security Info=True;User ID=sqlservices;Password=sqlservices1</Value>
     </Setting>
   </Settings>
 </SettingsFile>
