--- a/API_PLANT_PPE/Web.config
+++ b/API_PLANT_PPE/Web.config
@@ -10,7 +10,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=10.14.101.101\SHPOL;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />
+    <!--<add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=10.14.101.101\SHPOL;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />-->
+	<add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=KPHOAZSQCO402.KPPMINING.NET;Initial Catalog=DB_PLANT_PPE_NEW_KPP;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -100,18 +101,18 @@
     <API_PLANT_PPE.Properties.Settings>
       <setting name="API_PLANT_PPE_EquipmentServices_EquipmentService"
         serializeAs="String">
-        <value>https://ews-kpt.kppmining.net/ews/services/EquipmentService</value>
+        <value>https://ews-kpp.kppmining.net/ews/services/EquipmentService</value>
       </setting>
       <setting name="API_PLANT_PPE_RefCodesService_RefCodesService"
         serializeAs="String">
-        <value>https://ews-kpt.kppmining.net/ews/services/RefCodesService</value>
+        <value>https://ews-kpp.kppmining.net/ews/services/RefCodesService</value>
       </setting>
       <setting name="API_PLANT_PPE_EquipmentReferenceService_EquipmentReferenceService"
         serializeAs="String">
-        <value>https://ews-kpt.kppmining.net/ews/services/EquipmentReferenceService</value>
+        <value>https://ews-kpp.kppmining.net/ews/services/EquipmentReferenceService</value>
       </setting>
       <setting name="API_PLANT_PPE_ScreenService_ScreenService" serializeAs="String">
-        <value>https://ews-kpt.kppmining.net/ews/services/ScreenService</value>
+        <value>https://ews-kpp.kppmining.net/ews/services/ScreenService</value>
       </setting>
     </API_PLANT_PPE.Properties.Settings>
   </applicationSettings>
