--- a/API_PLANT_PPE/Web.config
+++ b/API_PLANT_PPE/Web.config
@@ -11,6 +11,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=10.14.101.101\SHPOL;Initial Catalog=DB_PLANT_PPE_NEW_KPT;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />-->
+	<!--<add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=10.17.4.5;Initial Catalog=DB_PLANT_PPE_NEW;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />-->
 	<add name="DB_PLANT_PPE_NEW_KPTConnectionString" connectionString="Data Source=KPHOAZSQCO402.KPPMINING.NET;Initial Catalog=DB_PLANT_PPE_NEW_KPP;User ID=sqlservices;Password=sqlservices1" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -24,6 +25,8 @@
 	<add key="username" value="dailykpp" />
 	<add key="password" value="kpp12345" />
 	<add key="pos_id" value="KP2SD03" />
+
+	<add key="FileUploadPath" value="\mounts\ppe" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8">
