--- a/MSO687_CONSOLEAPP/MSO687_CONSOLEAPP.csproj
+++ b/MSO687_CONSOLEAPP/MSO687_CONSOLEAPP.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>D:\Publish Project\PLANT_PPE_PROD\20231115\MSO_CONSOLE_PPE\</PublishUrl>
+    <PublishUrl>D:\KPP Project\Publish Project\PLANT_PPE_PROD\20240205\MSO687_CONSOLE\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>false</MapFileExtensions>
-    <ApplicationRevision>14</ApplicationRevision>
+    <ApplicationRevision>15</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
