--- a/PLANT_PPE/Web.config
+++ b/PLANT_PPE/Web.config
@@ -16,14 +16,14 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	  
     <!--Local dev014-->
-    <add key="WebApp_Link" value="https://localhost:44366/" />
+    <!--<add key="WebApp_Link" value="https://localhost:44366/" />-->
 	  
     <!--development dev014 -->
     <!--<add key="WebApp_Link" value="http://10.14.101.111:1906/"/>-->
 	<!--<add key="WebApp_Link" value="https://ppeapikpt.azurewebsites.net/"/>-->
 	  
 	<!--production-->
-	<!--<add key="WebApp_Link" value="https://ppe-01.kppmining.com/"/>-->
+	<add key="WebApp_Link" value="https://ppe-01.kppmining.com/"/>
 
 	<add key="report_server_url" value="http://10.14.101.181/Reports_RPTPROD/" />
 	<add key="report_path" value="/PPE/"/>
